disabling the ga's that aren't being used

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -895,10 +895,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
+    "\"\"\"\n",
     "with tqdm.tqdm(total=100) as pbar:\n",
     "    gen10 = pygad.GA(num_generations=100,num_parents_mating=10,fitness_func=fit_me10_all,sol_per_pop=50,num_genes=8,init_range_low=-1)\n",
-    "    gen10.run()"
+    "    gen10.run()\"\"\""
    ],
    "metadata": {
     "collapsed": false,
@@ -923,7 +923,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "num = 0\n",
+    "\"\"\"num = 0\n",
     "sols = {}\n",
     "for tick in list(ticker400_data.keys()):\n",
     "    print(\"Currently working on: \" + tick + \" \" + str(num))\n",
@@ -932,7 +932,7 @@
     "    #print(fit)\n",
     "    sols[tick] = pygad.GA(num_generations=100,num_parents_mating=10,fitness_func=fit_params_AUC(splits25,splits25_YB,tick,10),sol_per_pop=50,num_genes=8,init_range_low=-1,suppress_warnings=True,save_best_solutions=True)\n",
     "    sols[tick].run()\n",
-    "    print(sols[tick].best_solutions)"
+    "    print(sols[tick].best_solutions)\"\"\""
    ],
    "metadata": {
     "collapsed": false,
@@ -955,7 +955,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "num = 0\n",
+    "\"\"\"num = 0\n",
     "sols_lagged = {k: {} for k in [1,5,10,15,20]}\n",
     "for tick in list(ticker400_data.keys()):\n",
     "    for lag in [1,5,10,15,20]:\n",
@@ -966,7 +966,7 @@
     "        #print(fit)\n",
     "        sols_lagged[lag][tick] = pygad.GA(num_generations=100,num_parents_mating=10,fitness_func=fit_params_AUC_lagged(splits25,splits25_YB,tick,10,lag),sol_per_pop=50,num_genes=8,init_range_low=-1,suppress_warnings=True,save_best_solutions=True)\n",
     "        sols_lagged[lag][tick].run()\n",
-    "        print(sols_lagged[lag][tick].best_solutions[-1],sols_lagged[lag][tick].best_solutions_fitness[-1])"
+    "        print(sols_lagged[lag][tick].best_solutions[-1],sols_lagged[lag][tick].best_solutions_fitness[-1])\"\"\""
    ],
    "metadata": {
     "collapsed": false,
@@ -998,7 +998,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "num = 0\n",
+    "\"\"\"num = 0\n",
     "sols_filterORx2 = {k: {} for k in [10,15,20]}\n",
     "for tick in list(ticker400_data.keys()):\n",
     "    print(\"Currently working on: \" + tick + \" \" + str(num))\n",
@@ -1007,7 +1007,7 @@
     "        sols_filterORx2[percent][tick] = pygad.GA(num_generations=250,num_parents_mating=10,fitness_func=fit_params_AUC_lagged_combinedOR(splits25,splits25_YB,tick,percent),sol_per_pop=50,num_genes=24,init_range_low=-1,suppress_warnings=True,save_best_solutions=True,stop_criteria='saturate_7')\n",
     "        sols_filterORx2[percent][tick].run()\n",
     "        print(sols_filterORx2[percent][tick].best_solutions[-1],sols_filterORx2[percent][tick].best_solutions_fitness[-1])\n",
-    "    num = num + 1"
+    "    num = num + 1\"\"\""
    ],
    "metadata": {
     "collapsed": false,
