fixed non-incremental buy and hold to start from start_date

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -2690,7 +2690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 98,
    "outputs": [],
    "source": [
     "class StratTester:\n",
@@ -2741,7 +2741,8 @@
     "            return self.buy_and_hold()\n",
     "        else:\n",
     "            for ticker in self.tickers:\n",
-    "                percent_change = (self.tickers[ticker].iloc[-1].open - self.tickers[ticker].iloc[0].open) / self.tickers[ticker].iloc[0].open\n",
+    "                increment = self.tickers[ticker].loc[(self.tickers[ticker]['date'] >= self.start_date)]\n",
+    "                percent_change = (increment.iloc[-1].open - increment.iloc[0].open) / increment.iloc[0].open\n",
     "                print(percent_change)\n",
     "                self.capital_buy_and_hold[-1] = self.capital_buy_and_hold[-1] + percent_change * investment_per + investment_per\n",
     "            return self.capital_buy_and_hold\n"
@@ -2755,119 +2756,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 99,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64.66019728027223\n",
-      "420.89913532590333\n",
-      "131.3294797926547\n",
-      "17.848452459169234\n",
-      "1223.67549189815\n",
-      "447.6516340719429\n",
-      "6.331199951171872\n",
-      "571.7418323863621\n",
+      "101.02585185200192\n",
+      "267.05746046756633\n",
+      "5.616473593675866\n",
+      "-0.6090140902380431\n",
+      "66.20780138465457\n",
+      "12.640597063510574\n",
+      "2.7404081383529957\n",
+      "13.449908615252257\n",
       "782.7989783653826\n",
-      "2.179211024389468\n",
-      "56.367999267578156\n",
-      "25.537187861439595\n",
-      "21.00177815755207\n",
-      "19.139158645969726\n",
+      "-0.3439722919854589\n",
+      "73.82782668295799\n",
+      "7.273402777317298\n",
+      "0.46896144968819464\n",
+      "5.221073156740083\n",
       "3.841942086893577\n",
-      "497.3000034600506\n",
-      "31.33026217792406\n",
-      "7.105882532456354\n",
-      "3.37608938991327\n",
-      "37.91388354775189\n",
-      "186.1791394104986\n",
-      "2.765562592471354\n",
-      "37.896805436643824\n",
-      "361.5977461610032\n",
-      "13.092751352973783\n",
-      "625.1458786426803\n",
-      "62.07029015037523\n",
-      "47.338050881410226\n",
-      "36.210758423746974\n",
+      "39.40270366665214\n",
+      "1.9157882746100234\n",
+      "2.0879552504595633\n",
+      "-0.31331308475019\n",
+      "7.481231219951939\n",
+      "259.9163707386362\n",
+      "-0.8140463004079399\n",
+      "5.782165916102706\n",
+      "14.024423817848135\n",
+      "3.7266713243394887\n",
+      "7.152941539790819\n",
+      "8.37456402993388\n",
+      "6.5771060465233075\n",
+      "3.108855344306834\n",
       "-0.18441146964588048\n",
-      "15.71898578487686\n",
-      "161.18671730994808\n",
-      "12.434768771662297\n",
+      "6.453041630993984\n",
+      "5.362125535469575\n",
+      "1.7762164238650444\n",
       "35.8364384940696\n",
-      "3.490115928655632\n",
-      "0.2308994676700953\n",
-      "5.717770622875306\n",
-      "14.508645346644144\n",
-      "135.3849213088768\n",
-      "14.225668426047307\n",
-      "799.819989913552\n",
-      "9.589862146424135\n",
-      "6678.351381265648\n",
-      "64.67518564327159\n",
-      "6.981344508599499\n",
-      "144.27487837906233\n",
-      "-0.6763636415654963\n",
-      "107.0880004882816\n",
+      "-0.17045346758989133\n",
+      "-0.010042555788731868\n",
+      "5.35324038522694\n",
+      "-0.06827903570130603\n",
+      "125.31623584312081\n",
+      "1.748710785143672\n",
+      "2.4223075491719013\n",
+      "2.0385252781178025\n",
+      "16.46392288887898\n",
+      "1.479671497885376\n",
+      "4.528171276536512\n",
+      "4.138472085897703\n",
+      "-0.9641309829442868\n",
+      "4.629583358764666\n",
       "0.6274285452706457\n",
-      "21.911144902854296\n",
-      "2.478523575932718\n",
-      "52.28146198310882\n",
-      "42.26533867801051\n",
-      "228.8406643907571\n",
-      "286.0912194718317\n",
-      "447.5328091723019\n",
-      "159.32052986906714\n",
-      "9.414545232599417\n",
-      "13722.30807369507\n",
-      "158.10489086058038\n",
-      "43.0620846298968\n",
-      "2.7276267825600304\n",
-      "5.042500019073487\n",
-      "1215.0376604876108\n",
-      "34.34159102749454\n",
-      "457.6852072010869\n",
-      "0.17956786223761875\n",
+      "4.035620444760853\n",
+      "0.12684209723221573\n",
+      "0.9740541200380064\n",
+      "5.642829330787787\n",
+      "26.133967323908823\n",
+      "12.242406062977889\n",
+      "5.883035468538277\n",
+      "7.07683408228892\n",
+      "2.1172788451317985\n",
+      "1556.50400390625\n",
+      "0.7362637362637363\n",
+      "1.1732283464566928\n",
+      "2.477072933181668\n",
+      "2.8006879726850435\n",
+      "13.614803569061463\n",
+      "4.220391965379901\n",
+      "12.02439477237654\n",
+      "1.5324731095290083\n",
       "151.67428152901772\n",
-      "773.4390300195324\n",
-      "69.65473680358856\n",
-      "49.13267610678626\n",
-      "47.6400007134703\n",
-      "125.11764705882354\n",
+      "10.60526286664101\n",
+      "2.5234646534356537\n",
+      "2.6433632741355084\n",
+      "2.8207174161585353\n",
+      "23.714697406340058\n",
       "2.548166139784528\n",
-      "-0.7663999938964848\n",
-      "2.3524699410629664\n",
-      "164.85915492957747\n",
-      "0.12832368178174708\n",
-      "159.9752371651785\n",
-      "138.36602888276494\n",
-      "0.5355555216471356\n",
-      "3.6622423933225896\n",
-      "39.918223207446744\n",
-      "27.669089577414834\n",
-      "5.3855733907239\n",
-      "104.71006924841981\n",
-      "71.49702356216784\n",
+      "-0.9018487369312962\n",
+      "0.0940457873346417\n",
+      "97.95798319327731\n",
+      "-0.6551236803034589\n",
+      "31.1950474330357\n",
+      "12.976307825289375\n",
+      "-0.2322222391764322\n",
+      "2.136289754784125\n",
+      "3.6206973908477327\n",
+      "14.767999267578158\n",
+      "0.3385566632772247\n",
+      "10.622185202205875\n",
+      "53.51776171875021\n",
       "6.2493288349141745\n",
-      "65.83611813293649\n",
-      "1810.027027027027\n",
-      "49.258459210971964\n",
-      "115.86988138366571\n",
-      "20.597382241377524\n",
-      "5.834326266862622\n",
-      "65.91597957534294\n",
-      "11.934737356085536\n",
-      "7.787725832767772\n",
-      "1497.0331730769226\n",
-      "66.75384507715373\n",
-      "40.20874319964575\n",
-      "[10000, 3664304.030691131]\n"
+      "20.138713278965707\n",
+      "61.044444444444444\n",
+      "11.972115140229043\n",
+      "5.587572252246282\n",
+      "23.980106331125622\n",
+      "1.045230079402576\n",
+      "5.904029482886904\n",
+      "-0.21898301981263182\n",
+      "1.5835915023417828\n",
+      "7.00757863898026\n",
+      "8.54796767816311\n",
+      "2.849682137031959\n",
+      "[10000, 425339.3088835761]\n"
      ]
     }
    ],
    "source": [
     "#ticker400_data['AABA'].iloc[int(len(ticker400_data)/4*3)].date\n",
-    "test = StratTester(ticker400_data,ticker400_data['AABA'].iloc[int(len(ticker400_data)/4*3)].date,strategy=None,increment=-1)#datetime.timedelta(weeks=1))\n",
+    "test = StratTester(ticker400_data,ticker400_data['AABA'].iloc[int(len(ticker400_data)/4*3)].date,strategy=None,increment=-1)#datetime.timedelta(weeks=1125))\n",
     "print(test.buy_and_hold())"
    ],
    "metadata": {
