fixed incremental both buy and hold functions should work now

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -2690,7 +2690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 140,
    "outputs": [],
    "source": [
     "class StratTester:\n",
@@ -2722,13 +2722,13 @@
     "            #end_increment is included in the calculation so the reinvestment happens on the same day!\n",
     "            end_increment = self.increment_start_date + self.increment\n",
     "            # edge case that end_increment is out of date scope then we just cut off the last week and return it\n",
-    "            if self.tickers[next(iter(self.tickers))]['date'].max() < end_increment:\n",
+    "            if self.tickers[next(iter(self.tickers))]['date'].max() < self.increment_start_date:\n",
     "                return self.capital_buy_and_hold\n",
     "            for ticker in self.tickers:\n",
-    "                #print(ticker)\n",
+    "                #print(self.increment_start_date, end_increment)\n",
     "                increment = self.tickers[ticker].loc[(self.tickers[ticker]['date'] >= self.increment_start_date) & (self.tickers[ticker]['date'] <= end_increment)]\n",
     "                #print(increment.iloc[0],increment.iloc[-1])\n",
-    "                if(len(increment)<=1):\n",
+    "                if len(increment)<=1:\n",
     "                    self.investments_buy_and_hold[ticker] = investment_per\n",
     "                else:\n",
     "                    percent_change = (increment.iloc[-1].open - increment.iloc[0].open) / increment.iloc[0].open\n",
@@ -2736,15 +2736,27 @@
     "                    self.investments_buy_and_hold[ticker] = investment_per*percent_change + investment_per\n",
     "                    #print(self.investments_buy_and_hold)\n",
     "                    #print(self.investments_buy_and_hold[ticker])\n",
+    "                #if ticker == \"MNST\":\n",
+    "                    #print(percent_change,ticker,len(increment))\n",
+    "                    #print(increment.iloc[0].open,increment.iloc[-1].open)\n",
     "                self.capital_buy_and_hold[-1] = self.investments_buy_and_hold[ticker] + self.capital_buy_and_hold[-1]\n",
-    "                self.increment_start_date = end_increment\n",
+    "            self.increment_start_date = end_increment\n",
     "            return self.buy_and_hold()\n",
     "        else:\n",
+    "            max = 0\n",
+    "            besto = \"\"\n",
     "            for ticker in self.tickers:\n",
     "                increment = self.tickers[ticker].loc[(self.tickers[ticker]['date'] >= self.start_date)]\n",
     "                percent_change = (increment.iloc[-1].open - increment.iloc[0].open) / increment.iloc[0].open\n",
-    "                print(percent_change)\n",
+    "                #print(percent_change, investment_per)\n",
     "                self.capital_buy_and_hold[-1] = self.capital_buy_and_hold[-1] + percent_change * investment_per + investment_per\n",
+    "                if percent_change >max:\n",
+    "                    besto = ticker\n",
+    "                    max = percent_change\n",
+    "                    start = increment.iloc[0].open\n",
+    "                    end = increment.iloc[-1].open\n",
+    "            print(max, besto)\n",
+    "            print(start,end)\n",
     "            return self.capital_buy_and_hold\n"
    ],
    "metadata": {
@@ -2756,125 +2768,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "101.02585185200192\n",
-      "267.05746046756633\n",
-      "5.616473593675866\n",
-      "-0.6090140902380431\n",
-      "66.20780138465457\n",
-      "12.640597063510574\n",
-      "2.7404081383529957\n",
-      "13.449908615252257\n",
-      "782.7989783653826\n",
-      "-0.3439722919854589\n",
-      "73.82782668295799\n",
-      "7.273402777317298\n",
-      "0.46896144968819464\n",
-      "5.221073156740083\n",
-      "3.841942086893577\n",
-      "39.40270366665214\n",
-      "1.9157882746100234\n",
-      "2.0879552504595633\n",
-      "-0.31331308475019\n",
-      "7.481231219951939\n",
-      "259.9163707386362\n",
-      "-0.8140463004079399\n",
-      "5.782165916102706\n",
-      "14.024423817848135\n",
-      "3.7266713243394887\n",
-      "7.152941539790819\n",
-      "8.37456402993388\n",
-      "6.5771060465233075\n",
-      "3.108855344306834\n",
-      "-0.18441146964588048\n",
-      "6.453041630993984\n",
-      "5.362125535469575\n",
-      "1.7762164238650444\n",
-      "35.8364384940696\n",
-      "-0.17045346758989133\n",
-      "-0.010042555788731868\n",
-      "5.35324038522694\n",
-      "-0.06827903570130603\n",
-      "125.31623584312081\n",
-      "1.748710785143672\n",
-      "2.4223075491719013\n",
-      "2.0385252781178025\n",
-      "16.46392288887898\n",
-      "1.479671497885376\n",
-      "4.528171276536512\n",
-      "4.138472085897703\n",
-      "-0.9641309829442868\n",
-      "4.629583358764666\n",
-      "0.6274285452706457\n",
-      "4.035620444760853\n",
-      "0.12684209723221573\n",
-      "0.9740541200380064\n",
-      "5.642829330787787\n",
-      "26.133967323908823\n",
-      "12.242406062977889\n",
-      "5.883035468538277\n",
-      "7.07683408228892\n",
-      "2.1172788451317985\n",
-      "1556.50400390625\n",
-      "0.7362637362637363\n",
-      "1.1732283464566928\n",
-      "2.477072933181668\n",
-      "2.8006879726850435\n",
-      "13.614803569061463\n",
-      "4.220391965379901\n",
-      "12.02439477237654\n",
-      "1.5324731095290083\n",
-      "151.67428152901772\n",
-      "10.60526286664101\n",
-      "2.5234646534356537\n",
-      "2.6433632741355084\n",
-      "2.8207174161585353\n",
-      "23.714697406340058\n",
-      "2.548166139784528\n",
-      "-0.9018487369312962\n",
-      "0.0940457873346417\n",
-      "97.95798319327731\n",
-      "-0.6551236803034589\n",
-      "31.1950474330357\n",
-      "12.976307825289375\n",
-      "-0.2322222391764322\n",
-      "2.136289754784125\n",
-      "3.6206973908477327\n",
-      "14.767999267578158\n",
-      "0.3385566632772247\n",
-      "10.622185202205875\n",
-      "53.51776171875021\n",
-      "6.2493288349141745\n",
-      "20.138713278965707\n",
-      "61.044444444444444\n",
-      "11.972115140229043\n",
-      "5.587572252246282\n",
-      "23.980106331125622\n",
-      "1.045230079402576\n",
-      "5.904029482886904\n",
-      "-0.21898301981263182\n",
-      "1.5835915023417828\n",
-      "7.00757863898026\n",
-      "8.54796767816311\n",
-      "2.849682137031959\n",
-      "[10000, 425339.3088835761]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "#ticker400_data['AABA'].iloc[int(len(ticker400_data)/4*3)].date\n",
-    "test = StratTester(ticker400_data,ticker400_data['AABA'].iloc[int(len(ticker400_data)/4*3)].date,strategy=None,increment=-1)#datetime.timedelta(weeks=1125))\n",
-    "print(test.buy_and_hold())"
+    "test = StratTester(ticker400_data,ticker400_data['AABA'].iloc[int(len(ticker400_data)/4*3)].date,strategy=None,increment=datetime.timedelta(weeks=1))\n",
+    "test2 = StratTester(ticker400_data,ticker400_data['AABA'].iloc[int(len(ticker400_data)/4*3)].date,strategy=None,increment=-1)\n",
+    "print(test.buy_and_hold(),test2.buy_and_hold())"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
