reworked the strategy and tested it working on implementing the strategy

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -1464,16 +1464,7 @@
     "            elif ite>=12 and solution[ite] < 0:\n",
     "                return -1\n",
     "        solution = [x[0] if hasattr(x,'__len__') else x for x in solution]\n",
-    "        #print(solution)\n",
-    "        col = 'volume%'\n",
-    "        if n_lagged == 5:\n",
-    "            col = 'volume5%'\n",
-    "        if n_lagged == 10:\n",
-    "            col = 'volume10%'\n",
-    "        if n_lagged == 15:\n",
-    "            col = 'volume15%'\n",
-    "        if n_lagged == 20:\n",
-    "            col = 'volume20%'\n",
+    "\n",
     "\n",
     "        test = df[tick][1][n_lagged-1:]\n",
     "\n",
@@ -2686,6 +2677,167 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "outputs": [],
+   "source": [
+    "def combined_filter_strategy(solution,start_date,df,n_lagged = 20):\n",
+    "        #47 genov\n",
+    "        #solution = [retUP,volUP,vol5UP,vol10UP,vol15UP,vol20UP,retDW,volDW,vol5DW,vol10DW,vol15DW,vol20DW,priorRUp,priorVUp,priorvol5UP,priorvol10UP,priorvol15UP,priorvol20UP,priorRDW,priorVDW,priorvol5DW,priorvol10DW,priorvol15DW,priorvol20DW,posR,pos1,pos5,pos10,pos15,pos20,posRD,pos1D,pos5D,pos10D,pos15D,pos20D,con1,con2,con3,con4,con5,cond1,cond2,cond3,cond4,cond5,skupi]\n",
+    "\n",
+    "        #n_lagged tells us how much history we need prior to the investment\n",
+    "        start_buffer = start_date - datetime.timedelta(days=n_lagged)\n",
+    "\n",
+    "        ####TRANSLATE TO POS ARGS####\n",
+    "        posu = [-1]*6\n",
+    "        posd = [-1]*6\n",
+    "        start = 0\n",
+    "        for i in solution[24:30]:\n",
+    "            if i not in posu:\n",
+    "                posu[start] = i\n",
+    "            start = start + 1\n",
+    "        start = 0\n",
+    "        for i in solution[30:36]:\n",
+    "            if i not in posd:\n",
+    "                posd[start] = i\n",
+    "            start = start + 1\n",
+    "        start = 0\n",
+    "        last = 0\n",
+    "        for i in posu:\n",
+    "            if i == -1:\n",
+    "                for last in range(last,6):\n",
+    "                    if last not in posu:\n",
+    "                        posu[start] = last\n",
+    "                        break\n",
+    "            start = start + 1\n",
+    "        start = 0\n",
+    "        last = 0\n",
+    "        for i in posd:\n",
+    "            if i == -1:\n",
+    "                for last in range(last,6):\n",
+    "                    if last not in posd:\n",
+    "                        posd[start] = last\n",
+    "                        break\n",
+    "            start = start + 1\n",
+    "\n",
+    "        #############################\n",
+    "        print(solution)\n",
+    "        for ite in range(len(solution)):\n",
+    "            if ite<12 and solution[ite] <= -1:\n",
+    "                return -1\n",
+    "            elif ite>=12 and solution[ite] < 0:\n",
+    "                return -1\n",
+    "\n",
+    "\n",
+    "        test = df.loc[df[\"date\"]>start_buffer]\n",
+    "\n",
+    "        ############QUERY SPEED TEST##############\n",
+    "        col_names = ['return_sh','vol_sh','vol5_sh','vol10_sh','vol15_sh','vol20_sh']\n",
+    "        test['return_sh'] = test['return'].shift( (solution[12]))\n",
+    "        test['vol_sh'] = test['volume%'].shift( (solution[13]))\n",
+    "        test['vol5_sh'] = test['volume5%'].shift( (solution[14]))\n",
+    "        test['vol10_sh'] = test['volume10%'].shift( (solution[15]))\n",
+    "        test['vol15_sh'] = test['volume15%'].shift( (solution[16]))\n",
+    "        test['vol20_sh'] = test['volume20%'].shift( (solution[17]))\n",
+    "        test = test.reset_index()\n",
+    "\n",
+    "        u0 = ' | ' if solution[36] else ' & '\n",
+    "        u1 = ' | ' if solution[37] else ' & '\n",
+    "        u2 = ' | ' if solution[38] else ' & '\n",
+    "        u3 = ' | ' if solution[39] else ' & '\n",
+    "        u4 = ' | ' if solution[40] else ' & '\n",
+    "\n",
+    "        connec = ' | ' if solution[-1] else ' & '\n",
+    "\n",
+    "        d0 = ' | ' if solution[41] else ' & '\n",
+    "        d1 = ' | ' if solution[42] else ' & '\n",
+    "        d2 = ' | ' if solution[43] else ' & '\n",
+    "        d3 = ' | ' if solution[44] else ' & '\n",
+    "        d4 = ' | ' if solution[45] else ' & '\n",
+    "        q = ('(' +col_names[posu[0]] + ' > ' + str(solution[posu[0]]) + u0 +\n",
+    "            '(' +col_names[posu[1]] + ' > ' + str(solution[posu[1]]) + u1 +\n",
+    "            '(' +col_names[posu[2]] + ' > ' + str(solution[posu[2]]) + u2 +\n",
+    "            '(' +col_names[posu[3]] + ' > ' + str(solution[posu[3]]) + u3 +\n",
+    "            '(' +col_names[posu[4]] + ' > ' + str(solution[posu[4]]) + u4 +\n",
+    "            '(' +col_names[posu[5]] + ' > ' + str(solution[posu[5]]) + '))))))' +\n",
+    "            connec +\n",
+    "            '(' +col_names[posd[0]] + ' < ' + str(solution[posd[0]]) + d0 +\n",
+    "            '(' +col_names[posd[1]] + ' < ' + str(solution[posd[1]]) + d1 +\n",
+    "            '(' +col_names[posd[2]] + ' < ' + str(solution[posd[2]]) + d2 +\n",
+    "            '(' +col_names[posd[3]] + ' < ' + str(solution[posd[3]]) + d3 +\n",
+    "            '(' +col_names[posd[4]] + ' < ' + str(solution[posd[4]]) + d4 +\n",
+    "            '(' +col_names[posd[5]] + ' < ' + str(solution[posd[5]]) + '))))))')\n",
+    "\n",
+    "\n",
+    "        print(len(test))\n",
+    "        up = test.query(q).index\n",
+    "        #res = np.array([False]*len(test))\n",
+    "        #res[up] =True\n",
+    "\n",
+    "        #returns pivot points so points where price supposedly took a turn\n",
+    "        return up"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.0247 1.0582 2.0875 0.7048 3.5728 0.8289 -0.0714 4.8204 6.5982 4.0936\n",
+      " -0.6009 7.1846 0 10 9 1 19 10 1 19 8 6 19 16 3 2 4 2 2 1 0 3 5 0 2 5 1 1\n",
+      " 1 0 1 0 0 0 0 0 1]\n",
+      "5570\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Int64Index([  19,   21,   22,   23,   24,   25,   26,   29,   30,   32,\n            ...\n            5550, 5551, 5553, 5554, 5556, 5563, 5564, 5565, 5568, 5569], dtype='int64', length=1493)"
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#testing function above\n",
+    "combined_filter_strategy(res.loc[(res[\"Ticker\"] == \"AABA\") & (res[\"Percent\"] == 10)]['Train_solution'].iloc[0],ticker400_data['AABA'].iloc[int(len(ticker400_data)/4*3)].date,ticker400_data['AABA'],n_lagged = 20)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def investment_based_on_pivots(df,pivots):\n",
+    "    down_trend = False\n",
+    "    up_trend = False\n",
+    "    opens = pd.Series(df.open)\n",
+    "    for day in opens:\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
