added trained the ga with f0.5 and added results as test_results100.pkl

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -1551,6 +1551,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "[on impact of skewness on metrics](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4285355/)\n",
     "testing other metrics on AABA:\n",
     "f0.5"
    ],
@@ -1560,8 +1561,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "outputs": [],
+   "execution_count": 200,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AABA\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "AAPL\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "ABT\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "ABX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "ADBE\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "AMAT\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "AMD\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "AMGN\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "AMZN\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "ARNC\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "ATVI\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "AXP\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "BAC\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "BAX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "BB\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "BBY\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "BMY\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "BSX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "C\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CAT\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CELG\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CHK\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CL\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CMCSA\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "COP\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CSCO\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CSX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CVS\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CVX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "CY\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "DIS\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "DWDP\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "EBAY\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "F\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "FCX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "FOXA\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "GE\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "GILD\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "GLW\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "GPS\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "HAL\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "HD\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "HPQ\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "IBM\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "INTC\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "JCP\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "JNJ\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "JNPR\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "JPM\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "KEY\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "KO\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "KR\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "LOW\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "LUV\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MCD\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MDT\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MGM\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MNST\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MO\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MRK\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MRO\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MS\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MSFT\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "MU\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "NKE\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "NOK\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "NVDA\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "ORCL\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "PEP\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "PFE\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "PG\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "QCOM\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "QQQ\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "RAD\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "RF\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "ROST\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "S\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "SBUX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "SCHW\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "SIRI\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "SLB\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "SLM\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "SYMC\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "T\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "TGT\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "TJX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "TSM\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "TXN\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "UNH\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "UNP\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "USB\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "VLO\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "VZ\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "WFC\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "WFT\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "WMB\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "WMT\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "XLNX\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n",
+      "XOM\n",
+      "Series([], Name: Test_AUC, dtype: object)\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "gene_type = [[np.float64,4] for x in range(12)]+[np.uint8 for x in range(35)]# + 0,3,5,3,2,2,1,4,2,3,3,5,0,1,1,0,0,1,0,1,1,0,1\n",
     "gene_space = [{'low':-1,'high':8}]*12+[list(range(20))]*12 + [list(range(6))]*12 + [[0,1]]*11\n",
@@ -1584,7 +1892,7 @@
     "percent = 15\n",
     "for t in list(ticker400_data):\n",
     "    print(t)\n",
-    "    for percent in [10,15]:\n",
+    "    for percent in [10]:\n",
     "        q = res_test.loc[(res_test['Ticker'] == t)& ( res_test['Percent'] ==percent),'Test_AUC']\n",
     "        print(q)\n",
     "        if len(q.index)>0 and not pd.isna(q.values[0]):\n",
@@ -1596,7 +1904,8 @@
     "        cur.run()\n",
     "        besto = cur.best_solution(pop_fitness=None)\n",
     "        res_test = res_test.append({'Ticker':t,'Percent':percent,'Train_AUC':besto[1],'Train_solution':besto[0],'Test_AUC':None},ignore_index=True)\n",
-    "        res_test.loc[(res_test['Ticker'] == t)& ( res_test['Percent'] ==percent),'Test_AUC'] = fit_params_AUC_lagged_combined_special_test(splits25,splits25_YB,t,percent,sty=0,metric=fbeta_score,beta=0.5)(besto[0],0)\n"
+    "        res_test.loc[(res_test['Ticker'] == t)& ( res_test['Percent'] ==percent),'Test_AUC'] = fit_params_AUC_lagged_combined_special_test(splits25,splits25_YB,t,percent,sty=0,metric=fbeta_score,beta=0.5)(besto[0],0)\n",
+    "        res.to_pickle('./test_results100.pkl')"
    ],
    "metadata": {
     "collapsed": false,
