figure out clustering for pivots (useful for auc since it gives alot of signals) -> not inherently applicable to real time though

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -3363,20 +3363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1132420933.py, line 35)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;36m  Input \u001B[0;32mIn [37]\u001B[0;36m\u001B[0m\n\u001B[0;31m    if pivots[p_p] <=\u001B[0m\n\u001B[0m                     ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "execution_count": 44,
+   "outputs": [],
    "source": [
-    "# TODO: i should also try to consolidate pivots that are really close -> invest on the first one\n",
-    "\n",
+    "# TODO: I should also try to consolidate pivots that are really close -> invest on the first one\n",
+    "# -> option to achieve that is to cluster until distance between closes pivots is long enough\n",
     "\n",
     "# trend returns +1 if positive trend or -1 if negative trend\n",
     "def pivots_to_trend(pivot_lower, pivot_higher, stock):\n",
