OrderedDict instead of normal dict so its easier to test strategy later

--- a/data_explorer.ipynb
+++ b/data_explorer.ipynb
@@ -26,6 +26,7 @@
     "import os\n",
     "import pygad\n",
     "import numexpr\n",
+    "from collections import OrderedDict\n",
     "\n",
     "#pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -3389,7 +3390,8 @@
     "    # [0] is beginning of investment, [1] is end of investment\n",
     "    cur_investment = (-1,-1)\n",
     "    # holds all past investments in format ((beginning_of_investment, end_of_investment) : (profit, drawdown, overhead))\n",
-    "    investments = {}\n",
+    "    # we want to preserve the order in which the elements are inserted\n",
+    "    investments = OrderedDict()\n",
     "\n",
     "    for c_p in pivots_computed:\n",
     "\n",
@@ -3488,7 +3490,7 @@
     "        #print(investment_per)\n",
     "        self.capital_buy_and_hold.append(0)\n",
     "        if self.incremental:\n",
-    "            #end_increment is included in the calculation so the reinvestment happens on the same day!\n",
+    "            # end_increment is included in the calculation so the reinvestment happens on the same day!\n",
     "            end_increment = self.increment_start_date + self.increment\n",
     "            # edge case that end_increment is out of date scope then we just cut off the last week and return it\n",
     "            if self.tickers[next(iter(self.tickers))]['date'].max() < self.increment_start_date:\n",
